--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </li>
                     <li><div class="dropdown-divider"></div></li>
                     <li><a class="dropdown-item" target="_blank"  href="http://students.washington.edu/walzejon/lavender/">Lavender</a></li>
-                    <!-- <li><a class="dropdown-item" target="_blank"  href="index1.html">Capstone</a></li> -->
+                    <li><a class="dropdown-item" target="_blank"  href="http://students.washington.edu/walzejon/final_site/">Concert website</a></li>
                   </ul>
             </div>
             </li>
@@ -252,8 +252,9 @@
           <br>
           <br>
         </div>
+        <div class="card">
 
-        
+        </div>
 
 
         
