--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="script.js"></script>
     </head>
     <body>
-      <nav class="navbar bg-color-purp navbar-expand-lg navbar-light bg-light">
+      <nav id="navigation" class="navbar bg-color-purp navbar-expand-lg navbar-light">
         <a class="navbar-brand purp-text" href="#">University Involvement</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -138,6 +138,7 @@
                     <li><div class="dropdown-divider"></div></li>
                     <li><a class="dropdown-item" target="_blank"  href="http://students.washington.edu/walzejon/lavender/">Lavender</a></li>
                     <li><a class="dropdown-item" target="_blank"  href="http://students.washington.edu/walzejon/final_site/">Concert website</a></li>
+
                   </ul>
             </div>
             </li>
